<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_margin="@dimen/spaceDimen_3"
    android:layout_alignParentEnd="true"
    android:text="@string/test_newsTitle"
    android:layout_toEndOf="@id/txt_detailContent_date"
    android:id="@+id/txt_detailContent_title"
    android:layout_width="match_parent"
    android:maxLines="@integer/maxLinesDimen_normal"
    android:layout_height="wrap_content"
    android:textStyle="bold|italic" />
    <TextView
        android:layout_margin="@dimen/spaceDimen_3"
        android:text="@string/test_datePublished"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_detailContent_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/txt_detailContent_title"
        android:id="@+id/card_detailContent_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_detailContent_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spaceDimen_3"
            android:text="@string/test_description"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>