<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.ss.bottomnavigation.BottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomNavDimen_normal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/White"
        android:elevation="@dimen/elevationDimen_normal"
        app:mode="phone">

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/ic_news_black_24dp"
            app:tab_text="@string/news"
            app:tab_text_color="@color/BlueGray300"
            app:unselected_tab_icon="@drawable/ic_news_gray300_24dp"
            app:unselected_tab_text_color="@color/Gray300" />

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/ic_search_black_24dp"
            app:tab_text="@string/search"
            app:tab_text_color="@color/BlueGray300"
            app:unselected_tab_icon="@drawable/ic_search_gray300_24dp"
            app:unselected_tab_text_color="@color/Gray300" />

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_categories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/ic_categories_black_24dp"
            app:tab_text="@string/categories"
            app:tab_text_color="@color/BlueGray300"
            app:unselected_tab_icon="@drawable/ic_categories_gray300_24dp"
            app:unselected_tab_text_color="@color/Gray300" />

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_top_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/ic_top_news_black_24dp"
            app:tab_text="@string/top_news"
            app:tab_text_color="@color/BlueGray300"
            app:unselected_tab_icon="@drawable/ic_top_news_gray300_24dp"
            app:unselected_tab_text_color="@color/Gray300" />
    </com.ss.bottomnavigation.BottomNavigation>

    <RelativeLayout
        android:id="@+id/rl_main_fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">
    </RelativeLayout>

</RelativeLayout>